thirdparty/picoev/src/picoev.h

#define PICOEV_READ 1
#define PICOEV_TIMEOUT 4
  typedef struct picoev_loop_st picoev_loop;
  typedef void picoev_handler(picoev_loop* loop, int fd, int revents,
			      void* cb_arg);
  typedef struct picoev_fd_st {
    /* use accessors! */
    /* TODO adjust the size to match that of a cache line */
    picoev_handler* callback;
    void* cb_arg;
    picoev_loop_id_t loop_id;
    char events;
    unsigned char timeout_idx; /* PICOEV_TIMEOUT_IDX_UNUSED if not used */
    int _backend; /* can be used by backends (never modified by core) */
  } picoev_fd;
  struct picoev_loop_st {
    /* read only */
    picoev_loop_id_t loop_id;
    struct {
      short* vec;
      short* vec_of_vec;
      size_t base_idx;
      time_t base_time;
      int resolution;
      void* _free_addr;
    } timeout;
    time_t now;
  };
  typedef struct picoev_globals_st {
    /* read only */
    picoev_fd* fds;
    void* _fds_free_addr;
    int max_fd;
    int num_loops;
    size_t timeout_vec_size; /* # of elements in picoev_loop.timeout.vec[0] */
    size_t timeout_vec_of_vec_size; /* ... in timeout.vec_of_vec[0] */
  } picoev_globals;
  extern picoev_globals picoev;
  /* creates a new event loop (defined by each backend) */
  picoev_loop* picoev_create_loop(int max_timeout);
  /* destroys a loop (defined by each backend) */
  int picoev_destroy_loop(picoev_loop* loop);
  /* initializes picoev */
  PICOEV_INLINE
  int picoev_init(int max_fd) {
    assert(! PICOEV_IS_INITED);
    assert(max_fd > 0);
    if ((picoev.fds = (picoev_fd*)picoev_memalign(sizeof(picoev_fd) * max_fd,
						  &picoev._fds_free_addr, 1))
	== NULL) {
      return -1;
    }
    picoev.max_fd = max_fd;
    picoev.num_loops = 0;
    picoev.timeout_vec_size
      = PICOEV_RND_UP(picoev.max_fd, PICOEV_SIMD_BITS) / PICOEV_SHORT_BITS;
    picoev.timeout_vec_of_vec_size
      = PICOEV_RND_UP(picoev.timeout_vec_size, PICOEV_SIMD_BITS)
      / PICOEV_SHORT_BITS;
    return 0;
  }
  /* deinitializes picoev */
  PICOEV_INLINE
  int picoev_deinit(void) {
    assert(PICOEV_IS_INITED);
    free(picoev._fds_free_addr);
    picoev.fds = NULL;
    picoev._fds_free_addr = NULL;
    picoev.max_fd = 0;
    picoev.num_loops = 0;
    return 0;
  }
  /* updates timeout */
  PICOEV_INLINE
  void picoev_set_timeout(picoev_loop* loop, int fd, int secs) {
    picoev_fd* target;
    short* vec, * vec_of_vec;
    size_t vi = fd / PICOEV_SHORT_BITS, delta;
    assert(PICOEV_IS_INITED_AND_FD_IN_RANGE(fd));
    assert(PICOEV_FD_BELONGS_TO_LOOP(loop, fd));
    target = picoev.fds + fd;
    /* clear timeout */
    if (target->timeout_idx != PICOEV_TIMEOUT_IDX_UNUSED) {
      vec = PICOEV_TIMEOUT_VEC_OF(loop, target->timeout_idx);
      if ((vec[vi] &= ~((unsigned short)SHRT_MIN >> (fd % PICOEV_SHORT_BITS)))
	  == 0) {
	vec_of_vec = PICOEV_TIMEOUT_VEC_OF_VEC_OF(loop, target->timeout_idx);
	vec_of_vec[vi / PICOEV_SHORT_BITS]
	  &= ~((unsigned short)SHRT_MIN >> (vi % PICOEV_SHORT_BITS));
      }
      target->timeout_idx = PICOEV_TIMEOUT_IDX_UNUSED;
    }
    if (secs != 0) {
      delta = (loop->now + secs - loop->timeout.base_time)
	/ loop->timeout.resolution;
      if (delta >= PICOEV_TIMEOUT_VEC_SIZE) {
	delta = PICOEV_TIMEOUT_VEC_SIZE - 1;
      }
      target->timeout_idx =
	(loop->timeout.base_idx + delta) % PICOEV_TIMEOUT_VEC_SIZE;
      vec = PICOEV_TIMEOUT_VEC_OF(loop, target->timeout_idx);
      vec[vi] |= (unsigned short)SHRT_MIN >> (fd % PICOEV_SHORT_BITS);
      vec_of_vec = PICOEV_TIMEOUT_VEC_OF_VEC_OF(loop, target->timeout_idx);
      vec_of_vec[vi / PICOEV_SHORT_BITS]
	|= (unsigned short)SHRT_MIN >> (vi % PICOEV_SHORT_BITS);
    }
  }
  /* registers a file descriptor and callback argument to a event loop */
  PICOEV_INLINE
  int picoev_add(picoev_loop* loop, int fd, int events, int timeout_in_secs,
		 picoev_handler* callback, void* cb_arg) {
    picoev_fd* target;
    if (!PICOEV_IS_INITED_AND_FD_IN_RANGE(fd)) { return -1; }
    target = picoev.fds + fd;
    assert(target->loop_id == 0);
    target->callback = callback;
    target->cb_arg = cb_arg;
    target->loop_id = loop->loop_id;
    target->events = 0;
    target->timeout_idx = PICOEV_TIMEOUT_IDX_UNUSED;
    if (picoev_update_events_internal(loop, fd, events | PICOEV_ADD) != 0) {
      target->loop_id = 0;
      return -1;
    }
    picoev_set_timeout(loop, fd, timeout_in_secs);
    return 0;
  }
  /* unregisters a file descriptor from event loop */
  PICOEV_INLINE
  int picoev_del(picoev_loop* loop, int fd) {
    picoev_fd* target;
    assert(PICOEV_IS_INITED_AND_FD_IN_RANGE(fd));
    target = picoev.fds + fd;
    if (picoev_update_events_internal(loop, fd, PICOEV_DEL) != 0) {
      return -1;
    }
    picoev_set_timeout(loop, fd, 0);
    target->loop_id = 0;
    return 0;
  }
  /* loop once */
  PICOEV_INLINE
  int picoev_loop_once(picoev_loop* loop, int max_wait) {
    loop->now = time(NULL);
    if (max_wait > loop->timeout.resolution) {
      max_wait = loop->timeout.resolution;
    }
    if (picoev_poll_once_internal(loop, max_wait) != 0) {
      return -1;
    }
    if (max_wait != 0) {
      loop->now = time(NULL);
    }
    picoev_handle_timeout_internal(loop);
    return 0;
  }